--- a/.github/workflows/docker-push-update.yml
+++ b/.github/workflows/docker-push-update.yml
@@ -1,33 +1,32 @@
-name: update docker image
-run-name: new-docker-image-by-${{ github.actor }}
-on:
-  push:
-    paths:
-      - .dockerignore
-      - Dockerfile
-jobs:
-    push-docker-image:
-        runs-on: ubuntu-latest   
-        steps:
-            - name: start proccess
-              run: | 
-                echo "there was a changed detected in .dockerignore or Dockerfile"
-                echo "updating docker image in dockerhub repo: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app" 
+# name: update docker image
+# run-name: new-docker-image-by-${{ github.actor }}
+# on:
+#   push:
+#     paths:
+#       - main
+# jobs:
+#     push-docker-image:
+#         runs-on: ubuntu-latest   
+#         steps:
+#             - name: start proccess
+#               run: | 
+#                 echo "there was a changed detected in .dockerignore or Dockerfile"
+#                 echo "updating docker image in dockerhub repo: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app" 
             
-            - name: Set up QEMU
-              uses: docker/setup-qemu-action@v2
+#             - name: Set up QEMU
+#               uses: docker/setup-qemu-action@v2
               
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v2
+#             - name: Set up Docker Buildx
+#               uses: docker/setup-buildx-action@v2
               
-            - name: Login to Docker Hub
-              uses: docker/login-action@v2
-              with:
-                username: ${{ secrets.DOCKERHUB_USERNAME }}
-                password: ${{ secrets.DOCKERHUB_TOKEN }}
-            -
-              name: Build and push
-              uses: docker/build-push-action@v4
-              with:
-                push: true
-                tags:  ${{ secrets.DOCKERHUB_USERNAME }}/chat-app:${{ github.sha }}
+#             - name: Login to Docker Hub
+#               uses: docker/login-action@v2
+#               with:
+#                 username: ${{ secrets.DOCKERHUB_USERNAME }}
+#                 password: ${{ secrets.DOCKERHUB_TOKEN }}
+#             -
+#               name: Build and push
+#               uses: docker/build-push-action@v4
+#               with:
+#                 push: true
+#                 tags:  ${{ secrets.DOCKERHUB_USERNAME }}/chat-app:${{ github.sha }}
