--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -1,30 +1,33 @@
-name: test application
-run-name: testing-by-${{ github.actor }}
+name: Test Application
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+    
+
 jobs:
   test-application:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v3
-            
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      
       - name: Set up Python environment
         uses: actions/setup-python@v2
         with:
           python-version: 3.10.12 
-            
-      - name: install requirements
+
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r test_requirements.txt
-            
-      - name: run unittest tests
+
+      - name: Run Unit Tests
         run: |
           cd test
           python -m unittest discover test -p "*_test.py"
-
-    outputs:
-      workflow-completed: ${{ steps.build.outputs.workflow-completed }}      
