--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -13,15 +13,15 @@ jobs:
               run: | 
                 echo "updating docker image in dockerhub repo: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app" 
                 
-            - name: Get Commit Message
-              id: commit_message
-              run: echo "::set-output name=message::$(git log -1 --pretty=%B)"
-            
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v2
               
-            - name: Set up Docker Buildx
+            - name: Set up Docker 
               uses: docker/setup-buildx-action@v2
+            
+            - name: Get Commit Message
+              id: commit_message
+              run: echo "::set-output name=message::$(git log -1 --pretty=%B)"
               
             - name: Login to Docker Hub
               uses: docker/login-action@v2
