--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -1,36 +1,39 @@
 name: upload docker image
-run-name: new-docker-image-by-${{ github.actor }}
 on:
   workflow_run:
     workflows: ["Test Application"]
     types:
       - completed
+
 jobs:
-    push-docker-image:
-        runs-on: ubuntu-latest   
-        steps:
-            - name: start proccess
-              run: | 
-                echo "updating docker image in dockerhub repo: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app" 
-                
-            - name: Set up QEMU
-              uses: docker/setup-qemu-action@v2
-              
-            - name: Set up Docker 
-              uses: docker/setup-buildx-action@v2
-            
-            - name: Get Commit Message
-              id: commit_message
-              run: echo "::set-output name=message::$(git log -1 --pretty=%B)"
-              
-            - name: Login to Docker Hub
-              uses: docker/login-action@v2
-              with:
-                username: ${{ secrets.DOCKERHUB_USERNAME }}
-                password: ${{ secrets.DOCKERHUB_TOKEN }}
-            -
-              name: Build and push
-              uses: docker/build-push-action@v4
-              with:
-                push: true
-                tags:  ${{ secrets.DOCKERHUB_USERNAME }}/chat-app:${{ steps.commit_message.outputs.message }}
+  push-docker-image:
+    runs-on: ubuntu-latest   
+    steps:
+      - name: start process
+        run: | 
+          echo "updating docker image in dockerhub repo: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app" 
+      
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker 
+        uses: docker/setup-buildx-action@v2
+
+      - name: Get Commit Message
+        id: commit_message
+        run: echo "::set-output name=message::$(git log -1 --pretty=%B)"
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app:${{ steps.commit_message.outputs.message }}
