--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -25,6 +25,13 @@ jobs:
       - name: Get Commit Message
         id: commit_message
         run: echo "::set-output name=message::$(git log -1 --pretty=%B)"
+      
+      - name: Replace Spaces with Underscores
+        id: commit_message_underscore
+        run: |
+          commit_message=$(git log -1 --pretty=%B)  # Get the commit message
+          commit_message_underscore=$(echo "$commit_message" | sed 's/ /_/g')  # Replace spaces with underscores
+          echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -36,4 +43,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app:${{ steps.commit_message.outputs.message }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app:${{ steps.commit_message_underscore.outputs.message_underscore }}
