--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip instafll -r requirements.txt
-          pip instalfl -r test_requirements.txt
+          pip install -r requirements.txt
+          pip install -r test_requirements.txt
 
       - name: Run Unit Tests
         run: |
