--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest  
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - run: echo 'The last workflow "Test Application" passed successfully. Starting to push the image to Docker Hub.'
+      - name: Notify Success  
+        run: echo 'The last workflow "Test Application" passed successfully. Starting to push the image to Docker Hub.'
 
       - name: start process
         run: | 
@@ -48,6 +49,7 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app:${{ steps.commit_message_underscore.outputs.message_underscore }}
+
 
   update-deployment-tag:
     runs-on: ubuntu-latest
