--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,53 +7,53 @@ on:
       - completed
 
 jobs:
-  # push-docker-image:
-  #   runs-on: ubuntu-latest  
-  #   if: ${{ github.event.workflow_run.conclusion == 'success' }}
-  #   steps:
-  #     - name: Notify Success  
-  #       run: echo 'The last workflow "Test Application" passed successfully. Starting to push the image to Docker Hub.'
+  push-docker-image:
+    runs-on: ubuntu-latest  
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    steps:
+      - name: Notify Success  
+        run: echo 'The last workflow "Test Application" passed successfully. Starting to push the image to Docker Hub.'
 
-  #     - name: start process
-  #       run: | 
-  #         echo "Updating the Docker image in Docker Hub repository: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app" 
+      - name: start process
+        run: | 
+          echo "Updating the Docker image in Docker Hub repository: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app" 
       
-  #     - name: Checkout Repository
-  #       uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-  #     - name: Set up QEMU
-  #       uses: docker/setup-qemu-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
-  #     - name: Set up Docker 
-  #       uses: docker/setup-buildx-action@v2
+      - name: Set up Docker 
+        uses: docker/setup-buildx-action@v2
 
-  #     - name: Get Commit Message
-  #       id: commit_message
-  #       run: echo "::set-output name=message::$(git log -1 --pretty=%B)"
+      - name: Get Commit Message
+        id: commit_message
+        run: echo "::set-output name=message::$(git log -1 --pretty=%B)"
       
-  #     - name: Replace Spaces with Underscores
-  #       id: commit_message_underscore
-  #       run: |
-  #         commit_message=$(git log -1 --pretty=%B)  # Get the commit message
-  #         commit_message_underscore=$(echo "$commit_message" | sed 's/ /_/g')  # Replace spaces with underscores
-  #         echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable
+      - name: Replace Spaces with Underscores
+        id: commit_message_underscore
+        run: |
+          commit_message=$(git log -1 --pretty=%B)  # Get the commit message
+          commit_message_underscore=$(echo "$commit_message" | sed 's/ /_/g')  # Replace spaces with underscores
+          echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable
 
-  #     - name: Login to Docker Hub
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #     - name: Build and push
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         push: true
-  #         tags: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app:${{ steps.commit_message_underscore.outputs.message_underscore }}
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app:${{ steps.commit_message_underscore.outputs.message_underscore }}
 
 
   update-deployment-tag:
     runs-on: ubuntu-latest
-    # needs: push-docker-image
+    needs: push-docker-image
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
