--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -94,7 +94,18 @@ jobs:
           git config --global user.name "NVB20"
           git add .
           git commit -m "updated chat-app image"
-          git push origin main      
+          git push origin main   
+
+  merge-main:
+    runs-on: ubuntu-latest  
+    steps:      
+      - name: Merge to main
+        uses: devmasx/merge-branch@master
+        with:
+          type: now
+          from_branch: feature
+          target_branch: main
+          github_token: ${{ secrets.GIT_TOKEN }}
           
           
   on-failure:
