--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,13 +7,32 @@ on:
       - completed
 
 jobs:
-  push-docker-image:
+  merge-main:
     runs-on: ubuntu-latest  
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Notify Success  
         run: echo 'The last workflow "Test Application" passed successfully. Starting to push the image to Docker Hub.'
+      
+      - name: Merge to main
+        uses: devmasx/merge-branch@master
+        with:
+          type: now
+          from_branch: feature
+          target_branch: main
+          github_token: ${{ secrets.GIT_TOKEN }}
+      
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'The project tests has been succesfull.'
 
+  docker-image:
+    runs-on: ubuntu-latest  
+    needs: merge-main
+    steps:
       - name: start process
         run: | 
           echo "Updating the Docker image in Docker Hub repository: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app" 
@@ -35,9 +54,9 @@ jobs:
         id: commit_message_underscore
         run: |
           commit_message=$(git log -1 --pretty=%B)  # Get the commit message
-          commit_message_underscore=$(echo "$commit_message" | sed 's/ /_/g')  # Replace spaces with underscores
+          cleaned_tag=$(echo "$commit_message" | tr -cd '[:alnum:]-_')  # Remove invalid characters
+          commit_message_underscore=$(echo "$cleaned_tag" | sed 's/ /_/g')  # Replace spaces with underscores
           echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -49,11 +68,18 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app:${{ steps.commit_message_underscore.outputs.message_underscore }}
+          
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'A new Docker image is now available on Docker Hub. https://hub.docker.com/repository/docker/nvb20/chat-app/general'
 
 
   update-deployment-tag:
     runs-on: ubuntu-latest
-    needs: push-docker-image
+    needs: docker-image
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -68,7 +94,6 @@ jobs:
           commit_message=$(git log -1 --pretty=%B)
           commit_message_underscore=$(echo "$commit_message" | sed 's/ /_/g')
           echo "::set-output name=message_underscore::$commit_message_underscore"
-
       - name: clone CD repo
         uses: actions/checkout@v3
         with:
@@ -85,6 +110,13 @@ jobs:
           git add .
           git commit -m "updated chat-app image"
           git push origin main      
+      
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'The Helm chart has been updated with the new image'
           
           
   on-failure:
