try now, fix build

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -54,9 +54,9 @@ jobs:
         id: commit_message_underscore
         run: |
           commit_message=$(git log -1 --pretty=%B)  # Get the commit message
-          cleaned_tag=$(echo "$commit_message" | tr -cd '[:alnum:]-_')  # Remove invalid characters
-          commit_message_underscore=$(echo "$cleaned_tag" | sed 's/ /_/g')  # Replace spaces with underscores
+          commit_message_underscore=$(echo "$commit_message" | sed 's/ /_/g')  # Replace spaces with underscores
           echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -68,13 +68,6 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/chat-app:${{ steps.commit_message_underscore.outputs.message_underscore }}
-          
-      - name: Discord notification
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        uses: Ilshidur/action-discord@master
-        with:
-          args: 'A new Docker image is now available on Docker Hub. https://hub.docker.com/repository/docker/nvb20/chat-app/general'
 
 
   update-deployment-tag:
