--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,10 +55,13 @@ jobs:
         run: |
           commit_message=$(git log -1 --pretty=%B)  # Get the commit message
           cleaned_tag=$(echo "$commit_message" | tr -cd '[:alnum:]-_')  # Remove invalid characters
-          commit_message_underscore=$(echo "$cleaned_tag" | sed 's/ /_/g')  # Replace spaces with underscores
+          commit_message_underscore=$(echo "$cleaned_tag" | tr ' ' '_')  # Replace spaces with underscores
           echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable
-
           
+      - name: Debug tag value
+        run: |
+          echo "Tag value: ${{ steps.commit_message_underscore.outputs.message_underscore }}"
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -96,6 +99,7 @@ jobs:
           commit_message=$(git log -1 --pretty=%B)
           commit_message_underscore=$(echo "$commit_message" | sed 's/ /_/g')
           echo "::set-output name=message_underscore::$commit_message_underscore"
+
       - name: clone CD repo
         uses: actions/checkout@v3
         with:
