--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,28 @@ on:
       - completed
 
 jobs:
+  merge-main:
+    runs-on: ubuntu-latest  
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    steps:
+      - name: Notify Success  
+        run: echo 'The last workflow "Test Application" passed successfully. Starting to push the image to Docker Hub.'
+      
+      - name: Merge to main
+        uses: devmasx/merge-branch@master
+        with:
+          type: now
+          from_branch: feature
+          target_branch: main
+          github_token: ${{ secrets.GIT_TOKEN }}
+      
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'The project tests has been succesfull.'
+
   docker-image:
     runs-on: ubuntu-latest  
     needs: merge-main
@@ -36,6 +58,9 @@ jobs:
           commit_message_underscore=$(echo "$cleaned_tag" | tr ' ' '_')  # Replace spaces with underscores
           echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable
           
+      - name: Debug tag value
+        run: |
+          echo "Tag value: ${{ steps.commit_message_underscore.outputs.message_underscore }}"
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -73,7 +98,6 @@ jobs:
           commit_message=$(git log -1 --pretty=%B)
           commit_message_underscore=$(echo "$commit_message" | sed 's/ /_/g')
           echo "::set-output name=message_underscore::$commit_message_underscore"
-
       - name: clone CD repo
         uses: actions/checkout@v3
         with:
