--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,9 +7,31 @@ on:
       - completed
 
 jobs:
+  merge-main:
+    runs-on: ubuntu-latest  
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    steps:
+      - name: Notify Success  
+        run: echo 'The last workflow "Test Application" passed successfully. Starting to push the image to Docker Hub.'
+      
+      - name: Merge to main
+        uses: devmasx/merge-branch@master
+        with:
+          type: now
+          from_branch: feature
+          target_branch: main
+          github_token: ${{ secrets.GIT_TOKEN }}
+      
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'The project tests has been succesfull.'
+
   docker-image:
     runs-on: ubuntu-latest  
-    #needs: merge-main
+    needs: merge-main
     steps:
       - name: start process
         run: | 
