--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -31,6 +31,7 @@ jobs:
   
   merge-main:
           runs-on: ubuntu-latest  
+          needs: test-application
           steps:
             - name: Notify Success  
               run: echo 'The last workflow "Test Application" passed successfully. Starting to push the image to Docker Hub.'
