--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,19 +1,15 @@
 name: upload docker image
 
-# on:
-#   workflow_run:
-#     workflows: ["Test Application"]
-#     types:
-#       - completed
 on:
-  push:
-    branches:
-      - feature
+  workflow_run:
+    workflows: ["Test Application"]
+    types:
+      - completed
 
 jobs:
   create-docker-image:
     runs-on: ubuntu-latest 
-#####    if: ${{ github.event.workflow_run.conclusion == 'success' }} 
+    if: ${{ github.event.workflow_run.conclusion == 'success' }} 
     steps:
       - name: start process
         run: | 
