--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,6 +53,29 @@ jobs:
         uses: Ilshidur/action-discord@master
         with:
           args: 'A new Docker image is now available on Docker Hub. https://hub.docker.com/repository/docker/nvb20/chat-app/general'
+  
+  
+  merge-main:
+    runs-on: ubuntu-latest  
+    needs: create-docker-image
+    steps:
+      - name: Notify Success  
+        run: echo 'The last workflow "Test Application" passed successfully. Starting to push the image to Docker Hub.'
+            
+      - name: Merge to main
+        uses: devmasx/merge-branch@master
+        with:
+          type: now
+          from_branch: feature
+          target_branch: main
+          github_token: ${{ secrets.GIT_TOKEN }}
+      
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'The project tests has been succesfull.'
 
 
   update-deployment-tag:
