--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,8 @@ jobs:
           commit_message=$(git log -1 --pretty=%B)  # Get the commit message
           cleaned_tag=$(echo "$commit_message" | tr -cd '[:alnum:]-_')  # Remove invalid characters
           commit_message_underscore=$(echo "$cleaned_tag" | sed 's/ /_/g')  # Replace spaces with underscores
-          echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable
+          echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable    
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -75,7 +76,7 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@master
         with:
-          args: 'The project tests has been succesfull.'
+          args: 'The project has merged into the main branch.'
 
 
   update-deployment-tag:
