--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,11 +1,11 @@
-name: upload docker image
+name: create and upload docker image
 
 on:
   workflow_run:
     workflows: [Run Tests]
     types:
       - completed
-      
+
 jobs:
   create-docker-image:
     runs-on: ubuntu-latest 
@@ -27,10 +27,13 @@ jobs:
       - name: Replace Spaces with Underscores
         id: commit_message_underscore
         run: |
-          commit_message=$(git log -1 --pretty=%B)  # Get the commit message
+          commit_message=$(< "commit_message.txt")  # Get the commit message
           cleaned_tag=$(echo "$commit_message" | tr -cd '[:alnum:]-_')  # Remove invalid characters
           commit_message_underscore=$(echo "$cleaned_tag" | sed 's/ /_/g')  # Replace spaces with underscores
-          echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable
+          echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable    
+          rm commit_message.txt
+
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
