--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -28,3 +28,8 @@ jobs:
           cd test
           python -m unittest discover test -p "*_test.py"
         continue-on-error: false
+
+      - name: Get Commit Message
+        id: get_commit_message
+        run: |
+          echo "::set-output name=message::$(git log -1 --pretty=%B)" >> commit_message.txt
