--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,11 +1,14 @@
 name: create and upload docker image
 
+# on:
+#   workflow_run:
+#     workflows: [Run Tests]
+#     types:
+#       - completed
 on:
-  workflow_run:
-    workflows: [Run Tests]
-    types:
-      - completed
-
+  push:
+    branches:
+      - feature
 jobs:
   create-docker-image:
     runs-on: ubuntu-latest 
