--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -28,9 +28,20 @@ jobs:
         run: |
           cd test
           python -m unittest discover test -p "*_test.py"
-        
+        continue-on-error: false
+
+  notify-application:
+    runs-on: ubuntu-latest
+    needs: test-application
+    steps:
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'The project tests has been succesfull.'
+      
       - name: Get Commit Message
         id: get_commit_message
         run: |
           echo "::set-output name=message::$(git log -1 --pretty=%B)" >> commit_message.txt
-          continue-on-error: false
