--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -1,14 +1,10 @@
-name: Run Tests
+name: CI build
 
-on:
-  push:
-    branches:
-      - feature
+on: [push]
 
 jobs:
-  test-application:
+  build:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v2
