--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -53,6 +53,7 @@ jobs:
 
   create-docker-image:
     runs-on: ubuntu-latest 
+    needs: test-application
     steps:
       - name: start process
         run: | 
