--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -113,10 +113,11 @@ jobs:
       - name: Replace Spaces with Underscores
         id: commit_message_underscore
         run: |
-          commit_message=$(git log -1 --pretty=%B)
-          commit_message_underscore=$(echo "$commit_message" | sed 's/ /_/g')
-          echo "::set-output name=message_underscore::$commit_message_underscore"
-      
+          commit_message=$(git log -1 --pretty=%B)  # Get the commit message
+          cleaned_tag=$(echo "$commit_message" | tr -cd '[:alnum:]-_')  # Remove invalid characters
+          commit_message_underscore=$(echo "$cleaned_tag" | sed 's/ /_/g')  # Replace spaces with underscores
+          echo "::set-output name=message_underscore::$commit_message_underscore"  # Set the output variable
+        
       - name: clone CD repo
         uses: actions/checkout@v3
         with:
